# goit_python_web_hw02

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
personal_assistant/: main.py
personal_assistant/assistant/: __init__.py  assistant.py  file_sorter.py  io.py
personal_assistant/assistant/fields/: __init__.py  number.py
personal_assistant/assistant/utils/: data_handler.py
